1999-11-17  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/alpha/sys/procfs.h: Remove greg_t,
	gregset_t, fpregset_t, and NGREG definitions.

	* locale/programs/ld-ctype.c: Implement character width information
	handling.

1999-11-09  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/grantpt.c (grantpt): Add support for devfs.

	* sysdeps/unix/sysv/linux/getpt.c (__getpt): Check for devfs.
	Patch by German Jose Gomez Garcia <german@pinon.ccu.uniovi.es>.

	* sysdeps/unix/sysv/linux/linux_fsinfo.h (DEVFS_SUPER_MAGIC): Added.

1999-11-17  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/gnu/netinet/tcp.h: Add TCP_CORK definition.

1999-11-07  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/scsi/scsi_ioctl.h: New file with some
	defines from Linux scsi_ioctl.h header.

	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Added
	scsi_ioctl.h.
	* sysdeps/unix/sysv/linux/Dist: Likewise.

	* sysdeps/unix/sysv/linux/scsi/sg.h: Synced with Linux 2.3.26;
	pretty printed.

	* sysdeps/unix/sysv/linux/scsi/scsi.h (TYPE_ENCLOSURE): Added to
	sync with Linux 2.3.26.

1999-11-17  Andreas Jaeger  <aj@suse.de>

	* shlib-versions: Allow mipsel for libm.
	Patch by Maciej W. Rozycki <macro@ds2.pg.gda.pl>.

1999-11-16  Andreas Jaeger  <aj@suse.de>

	* math/fenv.h: Fix typos in comments.  Reported by Andreas Schwab.

1999-11-16  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/ld-ctype.c (set_class_defaults): Set default
	value for alpha and alnum correctly.

	* locale/programs/ld-address.c (address_output): Fix output of
	country_num.

1999-11-15  Ulrich Drepper  <drepper@cygnus.com>

	* timezone/asia: Update from tzdata1999j.
	* timezone/australasia: Likewise.
	* timezone/europe: Likewise.
	* timezone/northamerica: Likewise.
	* timezone/southamerica: Likewise.
	* timezone/zone.tab: Likewise.

1999-11-14  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/sys/procfs.h: Remove duplicate definitions.