@@ -355,8 +355,6 @@ CHARMAP
 END CHARMAP
 
 WIDTH
-<NU>...<US>		0
 <SP>...<'?>		1
-<DT>...<AC>		0
 <NS>...<y:>		1
 END WIDTH
